fix treatement radio button issue where you can toggle off an on treatment. Make the table responsive and have a horizontal scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -158,3 +158,12 @@ button {
     margin-bottom: 0px;
     margin-top: 0px;
 }
+
+.expanded-container{
+    overflow-x: auto;
+}
+
+.scrollBarTable {
+    overflow-x: auto;
+    display: inline;
+}
